Feat/article refactoring (#64)
* refactor: 초기 여행 계획 비공개/공개 삭제

* refactor: 형식 통일에 따른 리팩토링

* refactor: url 수정

* refactor: introduce 추가

* refactor: bookmarkCount 이동

* refactor: 아티클 전체조회 리팩토링

* refactor: imageUrl 추가